--- a/HR-scale-dev-full-detail.qmd
+++ b/HR-scale-dev-full-detail.qmd
@@ -94,12 +94,9 @@ demos %>%
 ## Initial Data Inspection
 
 ```{r}
-# Create Polychoric Correlation Matrix
-hrMatrix <- POLYCHORIC_R(hr, verbose = FALSE)
+bart <- cortest.bartlett(hr)
 
-bart <- cortest.bartlett(hrMatrix, n = 301)
-
-kmo <- KMO(hrMatrix)
+kmo <- KMO(hr)
 ```
 
 Using a polychoric correlation matrix, we analyzed Bartlett's Sphericity and the Kaiser-Meyer-Olkin test to ensure that the data were appropriate for factor analysis. Our data appeared adequate for factor analysis, with Kaiser Meyer-Olkin = `r kmo$MSA`, and Barlett's sphericity $\chi^2$(`r bart$df`) = `r bart$chisq`, p = `r bart$p.value`. Inspection of the correlation matrix showed many inter-item correlations \> .40, indicating that a factor solution should be possible.
@@ -134,14 +131,11 @@ ld$localdep_stats %>%
   tab_spanner(label = "G2 Statistics", columns = c(8,9)) %>% 
   tab_header(title = "Table 3: Inspection of Local Dependence between Similar Items")
 
-hrMatrix <- POLYCHORIC_R(hr %>% 
-                           select(-c(q4:q5, q8, q45, q24, q25,  
-                                     q32, q22, q40, q31)), 
-                         verbose = FALSE)
+hr1 <- hr %>% select(-c(q4, q5, q8, q22, q24, q25, q32, q31, q40, q45))
 
-bart <- cortest.bartlett(hrMatrix, n = 301)
+bart <- cortest.bartlett(hr1)
 
-kmo <- KMO(hrMatrix)
+kmo <- KMO(hr1)
 ```
 
 After removing items which showed excessive local dependence, bartlett's sphericity and Kaiser-Meyer-Olkin were checked again, with Kaiser Meyer-Olkin = `r kmo$MSA`, and Barlett's sphericity $\chi^2$(`r bart$df`) = `r bart$chisq`, p = `r bart$p.value`.
@@ -151,7 +145,7 @@ After removing items which showed excessive local dependence, bartlett's spheric
 ### Parallel Analysis
 
 ```{r}
-fa.para <- fa.parallel(hrMatrix, n.obs = 301,
+fa.para <- fa.parallel(hr1,
                        fm = "ml", 
                        cor = "poly")
 
@@ -160,11 +154,14 @@ fa.para <- fa.parallel(hrMatrix, n.obs = 301,
 ### Model 1
 
 ```{r}
+#| output: false
+
+
 # Initial Factor Analysis
-efa <- EFA.dimensions::EFA(hrMatrix,
+efa <- EFA.dimensions::EFA(hr1,
                     extraction = "ml", 
-                    Nfactors = 4, 
-                    Ncases = 301,
+                    Nfactors = 4,
+                    corkind = "polychoric",
                     rotation = "oblimin",
                     verbose = FALSE)
 
@@ -207,23 +204,15 @@ initial <- efa$pattern %>%
 An initial factor analysis revealed that a four factor solution provided poor fit for the data, with factor 1 explaining 41% of the total variance (eigenvalue = 14.57), factor 2 explaining 8% of the total variance (eigenvalue = 2.8), factor 3 explaining 3% of the total variance (eigenvalue = 1.05), and factor 4 explaining 2.5% of the total variance (eigenvalue = .90). This model had the following model fit indices: $\chi^2$(`r efa$dfMODEL`) = `r round(efa$chisqMODEL, 2)`, p = `r efa$pvalue`; CLI = `r round(efa$fit_coefs$CFI, 3)`; TLI = `r round(efa$fit_coefs$TLI, 3)`; RMSEA = `r round(efa$fit_coefs$RMSEA, 3)`. In addition to poor fit, there were numerous cross-loadings which exceeded the limit of difference of .2. Table 4 provides full factor loadings.
 
 ```{r}
+#| output: false
 
 # New Matrix
-hrMatrix <- 
-  POLYCHORIC_R(
-    hr %>% 
-      select(
-        # Factor 1
-        q1, q3, q6, q7, q13, q16, q18, q19, q21,q39,
-        # Factor 2
-        q33, q36, q38, q41, q42,
-        # Factor 3
-        q2, q9, q10, q23, q27, q29, q30
-        ),                         
-    verbose = FALSE)
+hr2 <- hr1 %>% 
+  select(
+    -c(q17, q12, q43, q15, q35, q37, q26, q34, q44, q20, q11, q28, q14, q27, q30, q3, q13))
 
 
-efa.final <- EFA.dimensions::EFA(hrMatrix,
+efa.final <- EFA.dimensions::EFA(hr2,
                     extraction = "ml", 
                     Nfactors = 3, 
                     Ncases = 301,
@@ -269,11 +258,11 @@ left_join(
            levels = 
              c(
                # Factor 1
-               "q1", "q3", "q6", "q7", "q13", "q16", "q18", "q19", "q21","q39",
+               "q1", "q18", "q7", "q19", "q21", "q6", "q16", "q39",
                # Factor 2
-               "q33", "q36", "q38", "q41", "q42",
+               "q42", "q36", "q38", "q33", "q41",
                # Factor 3
-               "q2", "q9", "q10", "q23", "q27", "q29", "q30"))) %>% 
+               "q9", "q2", "q23", "q10", "q29"))) %>% 
   janitor::clean_names() %>% 
   select(-q, -item_y) %>% 
   gt() %>% 
@@ -360,12 +349,12 @@ The first factor shows good reliability, with alpha, split half, and greatest lo
 
 ::: {.column width="55%"}
 ```{r}
-scale1 <- hr %>% 
-  select(q1, q3, q6, q7, q13, q16, q18, q19, q21,q39)
-scale2 <- hr %>% 
-  select(q33, q36, q38, q41, q42)
-scale3 <- hr %>% 
-  select(q2, q9, q10, q23, q27, q29, q30)
+scale1 <- df %>% 
+  select(q1, q18, q7, q19, q21, q6, q16, q39)
+scale2 <- df %>% 
+  select(q42, q36, q38, q33, q41)
+scale3 <- df %>% 
+  select(q9, q2, q23, q10, q29)
 
 
 splithalf1 <- splitHalf(scale1) ; splithalf2 <- splitHalf(scale2) ; splithalf3 <- splitHalf(scale3) 
@@ -617,9 +606,9 @@ hr <- df %>% # N = 301
   select(starts_with("q"), -Q_RecaptchaScore)
 
 # Initial Model Fit
-model <-  'F1 =~ q1 + q3 + q6 + q7 + q13 + q16 + q18 + q19 + q21 +q39
-           F2 =~ q33 + q36 + q38 + q41 + q42
-           F3 =~ q2 + q9 + q10 + q23 + q27 + q29 + q30
+model <-  'F1 =~ q1 + q18 + q7 + q19 + q21 + q6 + q16 + q39
+           F2 =~ q42 + q36 + q38 + q33 + q41
+           F3 =~ q9 + q2 + q23 + q10 + q29
 
            F1 ~~ F2
            F1 ~~ F3' 
@@ -634,7 +623,8 @@ fit <- cfa(
 
 
 fitmeasures(fit,
-            c("cfi", "tli", "srmr", "rmsea", "chisq", "df", "pvalue")) %>% 
+            c("cfi", "tli", "srmr", "rmsea", "chisq", "df", "pvalue"),
+            ci = TRUE) %>% 
   as_tibble(rownames = "Item") %>% 
   gt() %>% 
   tab_header(
@@ -642,7 +632,6 @@ fitmeasures(fit,
   ) %>% 
   fmt_number(columns = 2, 
              decimals = 2)
-
 
 
 ```
@@ -670,12 +659,12 @@ plot(set_cfa_layout(
 ## Scale Reliability
 Reliability is an issue with this model, as the first factor shows continued adequate reliability, but factors 2 and 3 continue to have poorer reliability. Additionally, reliability would be improved by dropping items, which would shorten factor 2, and make it only 3 items, if not fewer.
 ```{r}
-scale1 <- hr %>% 
-  select(q1, q3, q6, q7, q13, q16, q18, q19, q21,q39)
-scale2 <- hr %>% 
-  select(q33, q36, q38, q41, q42)
-scale3 <- hr %>% 
-  select(q2, q9, q10, q23, q27, q29, q30)
+scale1 <- df %>% 
+  select(q1, q18, q7, q19, q21, q6, q16, q39)
+scale2 <- df %>% 
+  select(q42, q36, q38, q33, q41)
+scale3 <- df %>% 
+  select(q9, q2, q23, q10, q29)
 
 
 splithalf1 <- splitHalf(scale1) ; splithalf2 <- splitHalf(scale2) ; splithalf3 <- splitHalf(scale3) 
@@ -706,30 +695,25 @@ data.frame(Factor = c("Factor 1", "Factor 1", "Factor 1", "Factor 2", "Factor 2"
 hr <- df %>% # N = 301
   select(starts_with("q"), -Q_RecaptchaScore)
 
-hr.ld <-
+hr1 <-
   hr %>% 
-  select(-c(q4:q5, 
-            q31,
-            q40,
-            q25,
-            q45))
-
-hrMatrix <- POLYCHORIC_R(hr.ld,
-                         verbose = FALSE)
+  select(-c(q4:q5, q25, q31, q40, q45, q8))
 
 
-bart <- cortest.bartlett(hrMatrix, n = 301)
+bart <- cortest.bartlett(hr1)
 
-kmo <- KMO(hrMatrix)
+kmo <- KMO(hr1)
 ```
 Based on poor model fit, this same data set was used to conduct a second exploratory factor analysis using a maximum likelihood estimator and an oblimin rotation. This exploratory study was not preregistered. The items which showed initial local dependence were reinspected. In this study, items 8, 24, 22, and 32 showed acceptable levels of local dependence, and were retained. After removing items which showed excessive local dependence, bartlett's sphericity and Kaiser-Meyer-Olkin were checked again, with Kaiser Meyer-Olkin = `r kmo$MSA`, and Barlett's sphericity $\chi^2$(`r bart$df`) = `r bart$chisq`, p = `r bart$p.value`.
 
 ```{r}
+#| output: false
+
 # Initial Factor Analysis
-efa <- EFA.dimensions::EFA(hrMatrix,
+efa <- EFA.dimensions::EFA(hr1,
                     extraction = "ml", 
                     Nfactors = 4, 
-                    Ncases = 301,
+                    corkind = "polychoric",
                     rotation = "oblimin",
                     verbose = FALSE)
 
@@ -774,21 +758,18 @@ An initial factor analysis revealed that a four factor solution provided poor fi
 After removing items with no primary loading or close cross loadings, a three factor solution provided the best fit. At this point, factor 3 consisted of 6 items which explained only 22% of the total variance and had 4 factor loadings less that .55. Between these quantitative reasons and inspecting the qualitative content of the items, they were removed. These were items 2, 9, 28, 29, and 32. The content of these items focused primarily on treatment aspects of harm reduction, where were less directly relevant to constructs of interest. 
 
 ```{r}
-# New Matrix
-hrMatrix <- 
-  POLYCHORIC_R(
-    hr %>% 
-      select(
-        # Factor 1
-        q1, q6, q7, q16, q18, q19, q21, q13, q39,
-        # Factor 2
-        q42, q36, q33, q35, q34, q38, q41),                         
-    verbose = FALSE)
+#| output: false
 
-efa.final <- EFA.dimensions::EFA(hrMatrix,
+hr2 <- df %>% 
+  select(# Factor 1
+        q7, q1, q6, q18, q19, q21, q24, q14, q13,
+        # Factor 2
+        q33, q42, q36, q35, q38, q34, q41)
+
+efa.final <- EFA.dimensions::EFA(hr2,
                     extraction = "ml", 
                     Nfactors = 2, 
-                    Ncases = 301,
+                    corkind = "polychoric",
                     rotation = "oblimin",
                     verbose = FALSE)
 
@@ -830,9 +811,9 @@ left_join(
            levels = 
              c(
                # Factor 1
-               "q1", "q6", "q7", "q16", "q18", "q19", "q21", "q13", "q39",
+              "q7", "q1", "q6", "q18", "q19", "q21", "q24", "q14", "q13",
                # Factor 2 
-               "q42", "q36", "q33", "q35", "q34", "q38", "q41"))) %>% 
+               "q33", "q42", "q36", "q35", "q38", "q34", "q41"))) %>% 
   janitor::clean_names() %>% 
   select(-q, -item_y) %>% 
   gt() %>% 
@@ -897,9 +878,9 @@ The resulting scale consists of the following items:
 final.items <- hr %>% 
       select(
         # Factor 1
-        q1, q6, q7, q16, q18, q19, q21, q13, q39,
+        q7, q1, q6, q18, q19, q21, q24, q14, q13,
         # Factor 2
-        q42, q36, q33, q35, q34, q38, q41)
+        q33, q42, q36, q35, q38, q34, q41)
 
 
 items <- readr::read_csv("references/codebooks/20231025_hr-scale-codebook.csv")
@@ -909,17 +890,21 @@ items %>%
     grepl("q", var_label)
     ) %>% 
   filter(var_label %in% 
-           c(# Factor 1
-             "q1", "q6", "q7", "q16", "q18", "q19", "q21", "q13", "q39",
-             # Factor 2 
-             "q42", "q36", "q33", "q35", "q34", "q38", "q41")) %>% 
+           c(
+             # Factor 1
+              "q7", "q1", "q6", "q18", "q19", "q21", "q24", "q14", "q13",
+               # Factor 2 
+               "q33", "q42", "q36", "q35", "q38", "q34", "q41"
+           )) %>% 
   arrange(
       factor(
     var_label,
     levels = c(# Factor 1
-             "q1", "q6", "q7", "q16", "q18", "q19", "q21", "q13", "q39",
-             # Factor 2 
-             "q42", "q36", "q33", "q35", "q34", "q38", "q41"))) %>% 
+      # Factor 1
+              "q7", "q1", "q6", "q18", "q19", "q21", "q24", "q14", "q13",
+               # Factor 2 
+               "q33", "q42", "q36", "q35", "q38", "q34", "q41"  
+      ))) %>% 
   mutate(
     item = 
       case_when(
@@ -955,9 +940,9 @@ The first factor shows good reliability, with alpha, split half, and greatest lo
 ::: {.column width="55%"}
 ```{r}
 scale1 <- df %>% 
-  select(q1, q6, q7, q16, q18, q19, q21, q13, q39)
+  select(q7, q1, q6, q24, q14, q18, q19, q13, q21)
 scale2 <- df %>% 
-  select(q42, q36, q33, q35, q34, q38, q41) 
+  select(q42, q36, q33, q35, q38, q34, q41)
 
 
 splithalf1 <- splitHalf(scale1) ; splithalf2 <- splitHalf(scale2)  
@@ -1127,8 +1112,8 @@ hr <- df %>% # N = 301
   select(starts_with("q"), -Q_RecaptchaScore)
 
 # Study 2 Model Fit
-model <-  'F1 =~ q21 + q1 + q6 + q7 + q16 + q18 + q19 + q13 + q39
-           F2 =~ q36 + q42 + q33 + q35 + q34 + q38 + q41
+model <-  'F1 =~ q7 + q1 + q6 + q18 + q19 + q21 + q24 + q14 + q13
+           F2 =~ q33 + q42 + q36 + q35 + q38 + q34 + q41
 
            F1 ~~ F2' 
 
@@ -1137,9 +1122,7 @@ fit <- cfa(
   data = df,
   ordered = TRUE,
   estimator = "WLS",
-  std.lv = TRUE
-)
-
+  std.lv = TRUE) 
 
 fitmeasures(fit,
             c("cfi", "tli", "srmr", "rmsea", "chisq", "df", "pvalue")) %>% 
@@ -1179,7 +1162,7 @@ plot(set_cfa_layout(
 ## Scale Inspection
 ```{r}
 meanscores <- df %>%
-  mutate(across(c(q39, q42, q35, q34, q41), 
+  mutate(across(c(q42, q35, q34, q41), 
                 ~ 6 - .),
          Strategies = 
            rowMeans(df %>% select(all_of(colnames(scale1))), na.rm = TRUE),
@@ -1191,9 +1174,9 @@ meanscores <- df %>%
 #| column: margin
 
 scale1 <- df %>% 
-  select(q1, q6, q7, q16, q18, q19, q21, q13, q39)
+  select(q7, q1, q6, q24, q14, q18, q19, q13, q21)
 scale2 <- df %>% 
-  select(q42, q36, q33, q35, q34, q38, q41) 
+  select(q42, q36, q33, q35, q38, q34, q41)
 
 
 splithalf1 <- splitHalf(scale1) ; splithalf2 <- splitHalf(scale2)  
@@ -1235,12 +1218,12 @@ Both factors show a similar distribution to in the initial study. Some more extr
 #|  - "Figure 8: Study 3, Strategies Subscale Response Distribution"
 #|  - "Figure 9: Study 3, Principles Subscale Response Distribution"
 
-
+items1 <-
 data.frame(alpha1$response.freq) %>% 
   mutate(item = rownames(.)) %>% 
-  left_join(item %>% 
-              select(qname, question), 
-            by = c("item" = "qname")) %>% 
+  left_join(items %>% 
+              select(var_label, item), 
+            by = c("item" = "var_label")) %>% 
   pivot_longer(c(X1:X5)) %>% 
   mutate(Response = 
            factor(case_when(
@@ -1248,26 +1231,29 @@ data.frame(alpha1$response.freq) %>%
              name == "X2" ~ "Somewhat disagree",
              name == "X3" ~ "Neither agree nor disagree",
              name == "X4" ~ "Somewhat agree",
-             name == "X5" ~ "Strongly Agree"
+             name == "X5" ~ "Strongly agree"
            ),
-             levels = c("Strongly disagree", 
-                        "Somewhat disagree",
-                        "Neither agree nor disagree",
-                        "Somewhat agree",
-                        "Strongly Agree"))) %>% 
+             levels = c("Strongly agree","Somewhat agree",
+                        "Neither agree nor disagree","Somewhat disagree",
+                        "Strongly disagree"))) %>% 
   ggplot() +
-  aes(x = question, y = value, fill = Response) +
+  aes(x = item.y, y = value, fill = Response) +
   geom_bar(stat = "identity", position = "stack") +
   geom_text(aes(label = paste0(round(value*100,0),"%")), 
             position = position_stack(vjust = .5),
             size = 3) +
+    ggokabeito::scale_fill_okabe_ito(
+      breaks = c("Strongly disagree","Somewhat disagree",
+                        "Neither agree nor disagree","Somewhat agree",
+                        "Strongly agree"
+      )) +
     coord_flip() +
-    ggforce::facet_col(facets = vars(question), 
+    ggforce::facet_col(facets = vars(item.y), 
                        scales = "free_y", 
                        space = "free",
                        labeller = label_wrap_gen(width = 100)
     ) +
-    labs(title = "Factor 1") +
+    labs(title = "Harm Reduction Strategies") +
     theme(
      axis.title = element_blank(),
       strip.background = element_blank(),
@@ -1275,45 +1261,49 @@ data.frame(alpha1$response.freq) %>%
       axis.ticks = element_blank(),
       axis.text = element_blank(),
       panel.background = element_blank(),
-      strip.text = element_text(size = 10),
+      strip.text = element_text(size = 16),
       panel.spacing = unit(-.5, "lines"),
       legend.title = element_blank(),
       strip.clip = "off",
       plot.title = element_text(hjust = 0.5, size = 20)
     )
 
-
+items2 <- 
 data.frame(alpha2$response.freq) %>% 
   mutate(item = rownames(.)) %>% 
-  left_join(item %>% 
-              select(qname, question), 
-            by = c("item" = "qname")) %>%
+  left_join(items %>% 
+              select(var_label, item), 
+            by = c("item" = "var_label")) %>%
   pivot_longer(c(X1:X5)) %>% 
   mutate(Response = 
-  factor(case_when(
-    name == "X1" ~ "Strongly disagree",
-  name == "X2" ~ "Somewhat disagree",
-  name == "X3" ~ "Neither agree nor disagree",
-  name == "X4" ~ "Somewhat agree",
-  name == "X5" ~ "Strongly Agree"),
-  levels = c("Strongly disagree", 
-             "Somewhat disagree",
-             "Neither agree nor disagree",
-             "Somewhat agree",
-             "Strongly Agree"))) %>% 
+           factor(case_when(
+             name == "X1" ~ "Strongly disagree",
+             name == "X2" ~ "Somewhat disagree",
+             name == "X3" ~ "Neither agree nor disagree",
+             name == "X4" ~ "Somewhat agree",
+             name == "X5" ~ "Strongly agree"
+           ),
+             levels = c("Strongly agree", "Somewhat agree", 
+                 "Neither agree nor disagree", 
+                 "Somewhat disagree", "Strongly disagree"))) %>% 
   ggplot() +
-  aes(x = question, y = value, fill = Response) +
+  aes(x = item.y, y = value, fill = Response) +
   geom_bar(stat = "identity", position = "stack") +
   geom_text(aes(label = paste0(round(value*100,0),"%")), 
             position = position_stack(vjust = .5),
             size = 3) +
+  ggokabeito::scale_fill_okabe_ito(
+      breaks = c("Strongly disagree","Somewhat disagree",
+                        "Neither agree nor disagree","Somewhat agree",
+                        "Strongly agree"
+      )) +
     coord_flip() +
-    ggforce::facet_col(facets = vars(question), 
+    ggforce::facet_col(facets = vars(item.y), 
                        scales = "free_y", 
                        space = "free",
                        labeller = label_wrap_gen(width = 100)
     ) +
-    labs(title = "Factor 2") +
+    labs(title = "Harm Reduction Principles") +
     theme(
      axis.title = element_blank(),
       strip.background = element_blank(),
@@ -1321,7 +1311,7 @@ data.frame(alpha2$response.freq) %>%
       axis.ticks = element_blank(),
       axis.text = element_blank(),
       panel.background = element_blank(),
-      strip.text = element_text(size = 10),
+      strip.text = element_text(size = 16),
       panel.spacing = unit(-.5, "lines"),
       legend.title = element_blank(),
       strip.clip = "off",
